--- a/agent/config/agent_1.yaml
+++ b/agent/config/agent_1.yaml
@@ -3,4 +3,4 @@
 profile: cis
 node-label+:
   # mark the node to allow using servicelb load balancer controller
-  - "svccontroller.k3s.cattle.io/enablelb=true"
+  - "svccontroller.rke2.cattle.io/enablelb=true"
