Add rancher support

--- a/agent/config/agent_0.yaml
+++ b/agent/config/agent_0.yaml
@@ -4,3 +4,4 @@ profile: cis
 node-label+:
   # mark the node to allow using servicelb load balancer controller
   - "svccontroller.rke2.cattle.io/enablelb=true"
+node-external-ip: 192.168.57.3
