--- a/server/config/server.yaml
+++ b/server/config/server.yaml
@@ -8,11 +8,12 @@ enable-servicelb: true
 profile: cis
 cluster-domain: cluster.local
 disable-kube-proxy: "true"
-node-label+:
-  # mark the node to allow using servicelb load balancer controller
-  - "svccontroller.rke2.cattle.io/enablelb=true"
+# node-label+:
+#   # mark the node to allow using servicelb load balancer controller
+#   - "svccontroller.rke2.cattle.io/enablelb=true"
 # node-taint+:
   # prevent scheduling regular workloads on the server node
   # - "CriticalAddonsOnly=true:NoExecute"
 tls-san+:
   - server.cluster.local
+pod-security-admission-config-file: /etc/rancher/rke2/rke2-pss-override.yaml
