--- a/server/manifests/rke2-cilium-config.yaml
+++ b/server/manifests/rke2-cilium-config.yaml
@@ -18,7 +18,7 @@ spec:
     kubeProxyReplacement: true
     k8sServiceHost: "localhost"
     k8sServicePort: "6443"
-    localRedirectPolicy: true
+    # localRedirectPolicy: true
     hubble:
       enabled: true
       relay:
